@@ -1,3 +1,15 @@
+2012-10-16  Antoine Quint  <graouts@apple.com>
+
+        Inspector should allow reading the compositing debug settings
+        https://bugs.webkit.org/show_bug.cgi?id=99458
+
+        Reviewed by Timothy Hatcher.
+
+        * inspector/Inspector.json:
+        * inspector/InspectorPageAgent.cpp:
+        (WebCore::InspectorPageAgent::getCompositingBordersVisible):
+        * inspector/InspectorPageAgent.h:
+
 2012-10-16  Dan Bernstein  <mitz@apple.com>
 
         Code to reverse a GlyphBuffer range is repeated in several places
